refactor: adiciona atributo target em <a/>

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="index.html" target="_self"></a></li>
-                <li><a href="./pages/form.html"></a></li>
-                <li><a href="./pages/display.html"></a></li>
+                <li><a href="./pages/form.html" target="_self"></a></li>
+                <li><a href="./pages/display.html" target="_self"></a></li>
             </ul>
         </nav>
     </header>
