feat: adiciona link para JS e CSS  em form.html
Adiciona também link para favicon.ico

--- a/pages/form.html
+++ b/pages/form.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../assets/img/favicon-form.ico" type="image/x-icon">
     <title>Cadastro</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header>
@@ -69,5 +71,7 @@
     <footer>
         <section></section>
     </footer>
+
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
